// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcTableSort #slots should render default slot 1`] = `
<div
  class="ec-table-sort"
  data-test="ec-table-sort"
>
  <div
    class="ec-table-sort__title"
  >
    <div>
      Random title
    </div>
  </div>
   
  <a
    class="ec-table-sort__icon-wrapper"
    data-test="ec-table-sort__icon-wrapper"
    href="#"
    title="Not sorted"
  >
    <svg
      class="ec-icon ec-table-sort__icon"
      data-test="ec-table-sort__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-arrow-up-down"
      />
    </svg>
     
    <!---->
  </a>
</div>
`;

exports[`EcTableSort :props should render with direction set to ASC 1`] = `
<div
  class="ec-table-sort"
  data-test="ec-table-sort"
>
  <div
    class="ec-table-sort__title"
  />
   
  <a
    class="ec-table-sort__icon-wrapper"
    data-test="ec-table-sort__icon-wrapper"
    href="#"
    title="Sorted ascending"
  >
    <svg
      class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
      data-test="ec-table-sort__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-arrow-drop-down"
      />
    </svg>
     
    <span
      class="ec-table-sort__text"
    >
      asc
    </span>
  </a>
</div>
`;

exports[`EcTableSort :props should render with direction set to DESC 1`] = `
<div
  class="ec-table-sort"
  data-test="ec-table-sort"
>
  <div
    class="ec-table-sort__title"
  />
   
  <a
    class="ec-table-sort__icon-wrapper"
    data-test="ec-table-sort__icon-wrapper"
    href="#"
    title="Sorted descending"
  >
    <svg
      class="ec-icon ec-table-sort__icon ec-table-sort__icon--desc"
      data-test="ec-table-sort__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-arrow-drop-down"
      />
    </svg>
     
    <span
      class="ec-table-sort__text"
    >
      desc
    </span>
  </a>
</div>
`;

exports[`EcTableSort :props should render with direction set to empty string 1`] = `
<div
  class="ec-table-sort"
  data-test="ec-table-sort"
>
  <div
    class="ec-table-sort__title"
  />
   
  <a
    class="ec-table-sort__icon-wrapper"
    data-test="ec-table-sort__icon-wrapper"
    href="#"
    title="Not sorted"
  >
    <svg
      class="ec-icon ec-table-sort__icon"
      data-test="ec-table-sort__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-arrow-up-down"
      />
    </svg>
     
    <!---->
  </a>
</div>
`;

exports[`EcTableSort :props should render with no direction 1`] = `
<div
  class="ec-table-sort"
  data-test="ec-table-sort"
>
  <div
    class="ec-table-sort__title"
  />
   
  <a
    class="ec-table-sort__icon-wrapper"
    data-test="ec-table-sort__icon-wrapper"
    href="#"
    title="Not sorted"
  >
    <svg
      class="ec-icon ec-table-sort__icon"
      data-test="ec-table-sort__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-arrow-up-down"
      />
    </svg>
     
    <!---->
  </a>
</div>
`;

exports[`EcTableSort should render as expected 1`] = `
<div
  class="ec-table-sort"
  data-test="ec-table-sort"
>
  <div
    class="ec-table-sort__title"
  />
   
  <a
    class="ec-table-sort__icon-wrapper"
    data-test="ec-table-sort__icon-wrapper"
    href="#"
    title="Not sorted"
  >
    <svg
      class="ec-icon ec-table-sort__icon"
      data-test="ec-table-sort__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-arrow-up-down"
      />
    </svg>
     
    <!---->
  </a>
</div>
`;
